--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -4,5 +4,6 @@
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:padding="10dip"
-          android:textSize="16sp">
+          android:textSize="18sp"
+          android:textColor="#000000">
 </TextView>
