--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/navigationHeader"
         android:layout_width="match_parent"
         android:layout_height="168dp"
-        android:background="@drawable/wallpaper"
+        android:background="@drawable/wallpaper2"
         android:paddingTop="24dp"
         android:onClick="click_screen"
         android:clickable="true">
@@ -37,44 +37,46 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/imgAvatar"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="2dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/status"
-                android:text="@string/tap_to_login"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:visibility="visible"
+                tools:visibility="gone"
+                android:id="@+id/user_name"
+                android:textColor="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/txtUserEmail"
+                android:text="@string/nav_header_status"
+                android:layout_width="wrap_content"
+                android:alpha=".7"
                 android:layout_height="28dp"
-                android:fontFamily="sans-serif-medium"
-                android:textColor="#424242"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
+                android:fontFamily="sans-serif"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"/>
 
 
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:visibility="visible"
-            tools:visibility="gone"
-            android:id="@+id/user_name"
-            android:layout_alignTop="@+id/imgAvatar"
-            android:layout_centerHorizontal="true"/>
-
-        <TextView
-            android:id="@+id/txtUserEmail"
-            android:text="@string/nav_header_status"
+            android:id="@+id/status"
+            android:text="@string/tap_to_login"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
-            android:layout_below="@+id/user_name"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="#FFFFFF"
+            android:alpha=".5"
             android:layout_toRightOf="@id/imgAvatar"
-            android:fontFamily="sans-serif"
-            android:textColor="@android:color/secondary_text_light"
-            android:textSize="14sp"/>
+            android:layout_toEndOf="@id/imgAvatar"
+            android:textSize="11sp"
+            android:textStyle="bold"/>
+
 
     </RelativeLayout>
 
