--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,31 +5,31 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
-            android:title="Home"/>
+            android:title="@string/home"/>
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_menu_history"
-            android:title="History"/>
+            android:title="@string/history"/>
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/ic_menu_calendar"
-            android:title="Calendar"/>
+            android:title="@string/calendar"/>
         <item
             android:id="@+id/nav_progress"
             android:icon="@drawable/ic_menu_progress"
-            android:title="Progress"/>
+            android:title="@string/progress"/>
     </group>
 
-    <item android:title="Tools">
+    <item android:title="@string/tools">
         <menu>
             <item
                 android:id="@+id/nav_timer"
                 android:icon="@drawable/ic_menu_timer"
-                android:title="Timer"/>
+                android:title="@string/timer"/>
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_settings"
-                android:title="Settings"/>
+                android:title="@string/settings"/>
         </menu>
     </item>
 
