--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -7,14 +7,14 @@
               android:paddingTop="16dp"
               android:orientation="vertical"
               android:paddingBottom="16dp"
-              android:background="@color/mdtp_white"
+              android:background="@color/icons"
               tools:context=".EditorActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/mdtp_white">
+        android:background="@color/icons">
 
 
         <TextView
